--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+Copyright training
+-->
+
 <head>
 	<Example website></title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
