--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright training
 -->
 
 <head>
-	<Example website></title>
+	<Respectfull website></title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,12 @@ Copyright training
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I am not sure what should go here
+			Some nice comments
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Jason Taylor 2014</p>
 	</footer>
 </body>
 </html>
