adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ Changes4
 -->
 
 <head>
-	<Respectfull website></title>
+	<LOts of Trouble></title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
