Done with simple updates

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ Changes4
 -->
 
 <head>
-	<LOts of Trouble></title>
+	<Update title for Stash></title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,6 +21,7 @@ Changes4
 	<!-- Content Goes Here -->
 		<p>
 			Some interesting stuff goes here
+			Adding more important stuff
 		</p>
 	</main>
 	<footer class="container">
