changes after git stash branch command

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ Changes4
 -->
 
 <head>
-	<Update title for Stash></title>
+	<Update title for Stash Branch></title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
